[gd_scene load_steps=13 format=3 uid="uid://b5lfenhk6cuxl"]

[ext_resource type="Script" uid="uid://cjryai5triewa" path="res://Player/player.gd" id="1_6bi4c"]
[ext_resource type="AudioStream" uid="uid://5hc36iookgos" path="res://Assets/Audio/SFX - Death Explosion.ogg" id="2_ha2n1"]
[ext_resource type="Material" uid="uid://bfsmy817tjo6d" path="res://Player/ship_body.material" id="2_q4fah"]
[ext_resource type="AudioStream" uid="uid://bkb3k2qj3ersv" path="res://Assets/Audio/SFX - Success.ogg" id="3_6i8w3"]
[ext_resource type="AudioStream" uid="uid://brkwcd8jf0f6a" path="res://Assets/Audio/SFX - Main engine thrust.ogg" id="4_u8tp4"]
[ext_resource type="PackedScene" uid="uid://ux6ivcx1ovdp" path="res://Assets/Particles/booster_particles.tscn" id="5_aj6jq"]
[ext_resource type="PackedScene" uid="uid://dcecb8hw7dbrv" path="res://Assets/Particles/explosion_particles.tscn" id="6_aoria"]
[ext_resource type="PackedScene" uid="uid://jfwajmrh6ca7" path="res://Assets/Particles/success_particles.tscn" id="7_yobkj"]

[sub_resource type="CylinderMesh" id="CylinderMesh_bla0v"]
material = ExtResource("2_q4fah")
top_radius = 0.2
bottom_radius = 0.2
height = 1.2

[sub_resource type="CylinderMesh" id="CylinderMesh_58g0g"]
top_radius = 0.0
bottom_radius = 0.2
height = 0.5

[sub_resource type="CylinderMesh" id="CylinderMesh_ml8jb"]
top_radius = 0.0
height = 0.4
radial_segments = 4

[sub_resource type="CylinderShape3D" id="CylinderShape3D_4ec0g"]

[node name="player" type="RigidBody3D"]
axis_lock_linear_z = true
axis_lock_angular_x = true
axis_lock_angular_y = true
max_contacts_reported = 3
contact_monitor = true
linear_damp = 1.0
angular_damp = 3.0
script = ExtResource("1_6bi4c")

[node name="body" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0711096, 0)
mesh = SubResource("CylinderMesh_bla0v")

[node name="cockpit" type="MeshInstance3D" parent="body"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.834723, 0)
material_override = ExtResource("2_q4fah")
mesh = SubResource("CylinderMesh_58g0g")
skeleton = NodePath("../..")

[node name="thruster" type="MeshInstance3D" parent="body"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.614762, 0)
material_override = ExtResource("2_q4fah")
mesh = SubResource("CylinderMesh_ml8jb")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CylinderShape3D_4ec0g")

[node name="death_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_ha2n1")

[node name="win_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_6i8w3")

[node name="engine_sound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("4_u8tp4")

[node name="BoosterParticles" parent="." instance=ExtResource("5_aj6jq")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.09647, 0)

[node name="RightBoosterParticles" parent="." instance=ExtResource("5_aj6jq")]
transform = Transform3D(0.668638, -0.743588, 0, 0.743588, 0.668638, 0, 0, 0, 1, 0.481688, -1.09647, 0)

[node name="LeftBoosterParticles" parent="." instance=ExtResource("5_aj6jq")]
transform = Transform3D(0.843204, 0.537594, 0, -0.537594, 0.843204, 0, 0, 0, 1, -0.473637, -1.09647, 0)

[node name="ExplosionParticles" parent="." instance=ExtResource("6_aoria")]

[node name="SuccessParticles" parent="." instance=ExtResource("7_yobkj")]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
